Setup the header with nav links with some basic styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section>
+    <section class="header bg-base">
+        <container>
+            <div class="nav-bar flex-row space-between">
+                <div class="header-logo">Header Logo</div>
+                <nav class="nav-links flex-row">
+                    <a>Header Link One</a>
+                    <a>Header Link Two</a>
+                    <a>Header Link Three</a>
+                </nav>
+            </div>
+        </container>
 
     </section>
     
