Added hero section and cleaned up the CSS file for better legibility and organistation in the future

--- a/index.html
+++ b/index.html
@@ -12,14 +12,25 @@
             <div class="nav-bar flex-row space-between">
                 <div class="header-logo">Header Logo</div>
                 <nav class="nav-links flex-row">
-                    <a>Header Link One</a>
-                    <a>Header Link Two</a>
-                    <a>Header Link Three</a>
+                    <a href="#">Header Link One</a>
+                    <a href="#">Header Link Two</a>
+                    <a href="#">Header Link Three</a>
                 </nav>
             </div>
         </container>
-
     </section>
-    
+    <section class="hero bg-base">
+        <container class="hero-container flex-row">
+            <div class="hero-content">
+                <h1 class="hero-h1">This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the contrast is lower to aid heirarchy of this section.</p>
+                <a class="btn-primary" href="#">Sign Up</a>
+            </div>
+            <div class="hero-media-wrapper">
+                <img src="#" class="hero-image">
+            </div>
+        </container>
+    </section>
+
 </body>
 </html>
