Hero Section is setup with placeholder content. All styling is setup for the header.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </container>
     </section>
     <section class="hero bg-base">
-        <container class="hero-container flex-row">
-            <div class="hero-content">
+        <container class="hero-container flex-row space-between">
+            <div class="hero-content flex-1">
                 <h1 class="hero-h1">This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the contrast is lower to aid heirarchy of this section.</p>
+                <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the contrast is lower to aid hierarchy of this section.</p>
                 <a class="btn-primary" href="#">Sign Up</a>
             </div>
-            <div class="hero-media-wrapper">
+            <div class="hero-media-wrapper flex-1">
                 <img src="#" class="hero-image">
             </div>
         </container>
