--- a/index.html
+++ b/index.html
@@ -32,5 +32,56 @@
         </container>
     </section>
 
+    <section>
+        <container class="item-section">
+            <div><h2 class="item-section-heading">Some Random Information.</h2></div>
+            <div class="item-grid">
+                    <div class="item-card flex-1">
+                        <div class="card-image"><img src="#"></div>
+                        <p class="card-subtext">this is some subtext under an illustration or image</p>
+                    </div>
+
+                    <div class="item-card flex-1">
+                        <div class="card-image"><img src="#"></div>
+                        <p class="card-subtext">this is some subtext under an illustration or image</p>
+                    </div>
+
+                    <div class="item-card flex-1">
+                        <div class="card-image"><img src="#"></div>
+                        <p class="card-subtext">this is some subtext under an illustration or image</p>
+                    </div>
+
+                    <div class="item-card flex-1">
+                        <div class="card-image"><img src="#"></div>
+                        <p class="card-subtext">this is some subtext under an illustration or image</p>
+                    </div>
+            </div>
+        </container>
+    </section>
+
+    <section class="quote-section">
+        <container class="quote-container">
+            <div class="quote-content">
+                <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="quote-credit">- Thor, God of Thunder</p>
+            </div>
+        </container>
+    </section>
+
+    <section class="cta-block">
+        <container class="cta-container bg-action">
+            <div class="cta-text">
+                <p class="cta-heading">Call to action! It's time!</p>
+                <p class="cta-description">Sign up for our products by clicking that link right over there.</p>
+            </div>
+            <div class="cta-btn">
+                <a class="btn-white btn-outline" href="#">Sign Up</a>
+            </div>
+        </container>
+    </section>
+
+    <footer class="bg-base">
+        <div class="copyright">Copyright - Ryan - The Odin Project</div>
+    </footer>
 </body>
 </html>
